native/include/photon/photon.h


typedef int32_t ph_bool;
typedef uint64_t ph_layer;
typedef uint32_t ph_color;
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
typedef int32_t ph_mode;
typedef int32_t ph_render_type;
typedef int32_t ph_legend_position;
typedef int32_t ph_text_align;
typedef int32_t ph_text_baseline;
typedef int32_t ph_dim;
typedef int32_t ph_annotation_type;
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  ph_bool         reverse;
  int32_t         discrete_steps;
} ph_colormap_spec;
typedef int32_t ph_orientation;
typedef struct ph_candlestick_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  open;
  const double*  high;
  const double*  low;
  const double*  close;
  int32_t        count;
  double         width;
  ph_color       up_color;
  ph_color       down_color;
  float          wick_width;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_candlestick_desc;
typedef struct ph_ohlc_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  open;
  const double*  high;
  const double*  low;
  const double*  close;
  int32_t        count;
  double         width;
  ph_color       up_color;
  ph_color       down_color;
  float          line_width;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_ohlc_desc;
typedef struct ph_annotation {
  uint32_t           struct_size;
  ph_annotation_type type;
  ph_dim             dim;
  double             x0;
  double             y0;
  double             x1;
  double             y1;
  double             high;
  double             low;
  const double*      ratios;
  int32_t            ratio_count;
  ph_color           color;
  ph_color           border;
  float              width;
  const float*       dash;
  int32_t            dash_count;
  const char*        label;
  const char*        text;
  float              dx;
  float              dy;
  ph_text_align      align;
  ph_text_baseline   baseline;
  float              size;
  ph_bool            fill;
  const char*        y_axis;
} ph_annotation;
typedef struct ph_legend_config {
  uint32_t           struct_size;
  ph_bool            enabled;
  ph_legend_position position;
  ph_bool            horizontal;
  ph_bool            no_toggle;
} ph_legend_config;
typedef struct ph_heatmap_desc {
  uint32_t                struct_size;
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  ph_range                x;
  ph_range                y;
  const ph_colormap_spec* colormap;
  ph_range                domain;
  ph_bool                 no_smooth;
  const char*             name;
  const char*             y_axis;
  ph_render_type          render_type;
} ph_heatmap_desc;
typedef struct ph_image_desc {
  uint32_t       struct_size;
  const uint8_t* pixels;
  int32_t        width;
  int32_t        height;
  ph_range       x;
  ph_range       y;
  ph_bool        bottom_up;
  ph_bool        no_smooth;
  float          opacity;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_image_desc;
typedef struct ph_patch {
  const double*  x;
  const double*  y;
  int32_t        count;
  const int32_t* holes;
  int32_t        hole_count;
  ph_color       color;
} ph_patch;
typedef struct ph_patches_desc {
  uint32_t                struct_size;
  const ph_patch*         patches;
  int32_t                 patch_count;
  ph_color                color;
  float                   opacity;
  const char*             name;
  const char*             y_axis;
  ph_render_type          render_type;
  const double*           values;
  const ph_colormap_spec* colormap;
  ph_range                domain;
} ph_patches_desc;
typedef int32_t ph_event_type;
typedef struct ph_event {
  uint32_t      struct_size;
  ph_event_type type;
  ph_layer      layer;        
  ph_range      x;            
  ph_range      y;            
  double        cursor_x;     
  double        cursor_y;
  ph_bool       cursor_valid;
  ph_mode       mode;         
  ph_bool       visible;      
  double        point_x;      
  double        point_y;
  int32_t       point_index;  
  ph_bool       point_valid;
} ph_event;
typedef struct ph_title_config {
  uint32_t      struct_size;
  const char*   text;
  ph_color      color;
  float         size;
  ph_text_align align;
} ph_title_config;
typedef struct ph_series {
  const double* y;
  ph_color      color;
  const char*   name;
} ph_series;
typedef struct ph_grouped_bar_desc {
  uint32_t         struct_size;
  const double*    x;
  int32_t          count;
  const ph_series* series;
  int32_t          series_count;
  double           group_width;
  double           gap;
  ph_orientation   orientation;
  const char*      y_axis;
  ph_render_type   render_type;
} ph_grouped_bar_desc;
typedef struct ph_stacked_desc {
  uint32_t         struct_size;
  const double*    x;
  int32_t          count;
  const ph_series* series;
  int32_t          series_count;
  double           width;
  ph_orientation   orientation;
  const char*      y_axis;
  ph_render_type   render_type;
} ph_stacked_desc;