native/bindings/csharp/Photon.g.cs


    /// <summary>ph_candlestick_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_candlestick_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr open;
        /// <summary>offset 24</summary>
        public IntPtr high;
        /// <summary>offset 32</summary>
        public IntPtr low;
        /// <summary>offset 40</summary>
        public IntPtr close;
        /// <summary>offset 48</summary>
        public int count;
        /// <summary>offset 56</summary>
        public double width;
        /// <summary>offset 64</summary>
        public uint up_color;
        /// <summary>offset 68</summary>
        public uint down_color;
        /// <summary>offset 72</summary>
        public float wick_width;
        /// <summary>offset 80</summary>
        public IntPtr name;
        /// <summary>offset 88</summary>
        public IntPtr y_axis;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_ohlc_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_ohlc_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr open;
        /// <summary>offset 24</summary>
        public IntPtr high;
        /// <summary>offset 32</summary>
        public IntPtr low;
        /// <summary>offset 40</summary>
        public IntPtr close;
        /// <summary>offset 48</summary>
        public int count;
        /// <summary>offset 56</summary>
        public double width;
        /// <summary>offset 64</summary>
        public uint up_color;
        /// <summary>offset 68</summary>
        public uint down_color;
        /// <summary>offset 72</summary>
        public float line_width;
        /// <summary>offset 80</summary>
        public IntPtr name;
        /// <summary>offset 88</summary>
        public IntPtr y_axis;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_annotation — 152 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_annotation
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int type;
        /// <summary>offset 8</summary>
        public int dim;
        /// <summary>offset 16</summary>
        public double x0;
        /// <summary>offset 24</summary>
        public double y0;
        /// <summary>offset 32</summary>
        public double x1;
        /// <summary>offset 40</summary>
        public double y1;
        /// <summary>offset 48</summary>
        public double high;
        /// <summary>offset 56</summary>
        public double low;
        /// <summary>offset 64</summary>
        public IntPtr ratios;
        /// <summary>offset 72</summary>
        public int ratio_count;
        /// <summary>offset 76</summary>
        public uint color;
        /// <summary>offset 80</summary>
        public uint border;
        /// <summary>offset 84</summary>
        public float width;
        /// <summary>offset 88</summary>
        public IntPtr dash;
        /// <summary>offset 96</summary>
        public int dash_count;
        /// <summary>offset 104</summary>
        public IntPtr label;
        /// <summary>offset 112</summary>
        public IntPtr text;
        /// <summary>offset 120</summary>
        public float dx;
        /// <summary>offset 124</summary>
        public float dy;
        /// <summary>offset 128</summary>
        public int align;
        /// <summary>offset 132</summary>
        public int baseline;
        /// <summary>offset 136</summary>
        public float size;
        /// <summary>offset 140</summary>
        public int fill;
        /// <summary>offset 144</summary>
        public IntPtr y_axis;
    }

    /// <summary>ph_legend_config — 20 bytes, alignment 4.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_legend_config
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int enabled;
        /// <summary>offset 8</summary>
        public int position;
        /// <summary>offset 12</summary>
        public int horizontal;
        /// <summary>offset 16</summary>
        public int no_toggle;
    }

    /// <summary>ph_heatmap_desc — 112 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_heatmap_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int cols;
        /// <summary>offset 20</summary>
        public int rows;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range y;
        /// <summary>offset 56</summary>
        public IntPtr colormap;
        /// <summary>offset 64</summary>
        public ph_range domain;
        /// <summary>offset 80</summary>
        public int no_smooth;
        /// <summary>offset 88</summary>
        public IntPtr name;
        /// <summary>offset 96</summary>
        public IntPtr y_axis;
        /// <summary>offset 104</summary>
        public int render_type;
    }

    /// <summary>ph_image_desc — 96 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_image_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr pixels;
        /// <summary>offset 16</summary>
        public int width;
        /// <summary>offset 20</summary>
        public int height;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range y;
        /// <summary>offset 56</summary>
        public int bottom_up;
        /// <summary>offset 60</summary>
        public int no_smooth;
        /// <summary>offset 64</summary>
        public float opacity;
        /// <summary>offset 72</summary>
        public IntPtr name;
        /// <summary>offset 80</summary>
        public IntPtr y_axis;
        /// <summary>offset 88</summary>
        public int render_type;
    }

    /// <summary>ph_patch — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_patch
    {
        /// <summary>offset 0</summary>
        public IntPtr x;
        /// <summary>offset 8</summary>
        public IntPtr y;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 24</summary>
        public IntPtr holes;
        /// <summary>offset 32</summary>
        public int hole_count;
        /// <summary>offset 36</summary>
        public uint color;
    }

    /// <summary>ph_patches_desc — 88 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_patches_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr patches;
        /// <summary>offset 16</summary>
        public int patch_count;
        /// <summary>offset 20</summary>
        public uint color;
        /// <summary>offset 24</summary>
        public float opacity;
        /// <summary>offset 32</summary>
        public IntPtr name;
        /// <summary>offset 40</summary>
        public IntPtr y_axis;
        /// <summary>offset 48</summary>
        public int render_type;
        /// <summary>offset 56</summary>
        public IntPtr values;
        /// <summary>offset 64</summary>
        public IntPtr colormap;
        /// <summary>offset 72</summary>
        public ph_range domain;
    }

    /// <summary>ph_event — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_event
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int type;
        /// <summary>offset 8</summary>
        public ulong layer;
        /// <summary>offset 16</summary>
        public ph_range x;
        /// <summary>offset 32</summary>
        public ph_range y;
        /// <summary>offset 48</summary>
        public double cursor_x;
        /// <summary>offset 56</summary>
        public double cursor_y;
        /// <summary>offset 64</summary>
        public int cursor_valid;
        /// <summary>offset 68</summary>
        public int mode;
        /// <summary>offset 72</summary>
        public int visible;
        /// <summary>offset 80</summary>
        public double point_x;
        /// <summary>offset 88</summary>
        public double point_y;
        /// <summary>offset 96</summary>
        public int point_index;
        /// <summary>offset 100</summary>
        public int point_valid;
    }

    /// <summary>ph_title_config — 32 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_title_config
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr text;
        /// <summary>offset 16</summary>
        public uint color;
        /// <summary>offset 20</summary>
        public float size;
        /// <summary>offset 24</summary>
        public int align;
    }

    /// <summary>ph_series — 24 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_series
    {
        /// <summary>offset 0</summary>
        public IntPtr y;
        /// <summary>offset 8</summary>
        public uint color;
        /// <summary>offset 16</summary>
        public IntPtr name;
    }

    /// <summary>ph_grouped_bar_desc — 80 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_grouped_bar_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 24</summary>
        public IntPtr series;
        /// <summary>offset 32</summary>
        public int series_count;
        /// <summary>offset 40</summary>
        public double group_width;
        /// <summary>offset 48</summary>
        public double gap;
        /// <summary>offset 56</summary>
        public int orientation;
        /// <summary>offset 64</summary>
        public IntPtr y_axis;
        /// <summary>offset 72</summary>
        public int render_type;
    }

    /// <summary>ph_stacked_desc — 72 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_stacked_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 24</summary>
        public IntPtr series;
        /// <summary>offset 32</summary>
        public int series_count;
        /// <summary>offset 40</summary>
        public double width;
        /// <summary>offset 48</summary>
        public int orientation;
        /// <summary>offset 56</summary>
        public IntPtr y_axis;
        /// <summary>offset 64</summary>
        public int render_type;
    }
